$Id$

Search API 1.0, dev (xx/xx/xxxx):
------------------------------------
API changes:

Others:
- #1039250: Improve facet block titles.
- #1043492: Problems with default (exported) entities.
- #1037916 by fago: Updates must not call API functions.
- #1032708 by larskleiner: Notice: Undefined variable: blocks.
- #1032404 by larskleiner: Notice: Undefined index: fields.
- #1032032 by pillarsdotnet: search_api_enable() aborts with a database error
  on install.
- #1026496: status doesn't get set properly when creating entities.
- #1027992 by TimLeytens: Filter indexed items based on bundle.
- #1024194 by TimLeytens: Provide a search block for each page.
- #1028042: Change {search_api_item}.index_id back to an INT.
- #1021664: Paged views results empty when adding facet.
- #872912: Write tests.
- #1013018: Make the "Fulltext field" data alteration more useful.
- #1024514: Error when preprocessing muli-valued fulltext fields.
- #1020372: CSS classes for facets.

Search API 1.0, Beta 5 (01/05/2011):
------------------------------------
API changes:
- #917998: Enhance data alterations by making them objects.
- #991632: Incorporate newly available entity hooks.
- #963062: Make facets exportable.

Others:
- #1018544: includes/entity.inc mentioned in a few places.
- #1011458: Move entity and processor classes into individual files.
- #1012478: HTML in node bodies is escaped in Views.
- #1014548: Add newly required database fields for entities.
- #915174: Remove unnecessary files[] declarations from .info files.
- #988780: Merge of entity modules.
- #997852: Service config oddities.
- #994948: "Add index" results in blank page.
- #993470: Unnecessary warning when no valid keys or filters are given.
- #986412: Notice: Undefined index: value in theme_search_api_page_result().
- #987928: EntityDBExtendable::__sleep() is gone.
- #985324: Add "Current search" block.
- #984174: Bug in Index::prepareProcessors() when processors have not been set.
